# fractal_rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
src/: fractal.rs  lib.rs  main.rs  shader.wgsl
