[package]
name = "fractal_rust"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fractal_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fractal_rust_bin"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = "0.28.2"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3.0"
wasm-bindgen-test = "0.3.34"
bytemuck = { version = "1.13.1", features = ["derive"] }
noise = "0.8.2"
web-sys = { version = "0.3.53", features = ["HtmlCanvasElement"] }
async-trait = "0.1.66"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlCanvasElement'
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
