[package]
name = "fractal_rust"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fractal_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fractal_rust_bin"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = { version = "0.29.7", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.18.0"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.18.0", features = ["webgl"]}
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    'Window',
    'HtmlCanvasElement'
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3.0"
glob = "0.3"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
